# poincare

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  dev-environment.yaml  environment.yml  pyproject.toml  requirements.test.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: external_callable.py  forced_oscillator.py  interactive.ipynb  lotka_volterra.py  oscillators.py  pendulum.py  robertson.py  test_examples.py
src/poincare/: __init__.py  _call.py  _node.py  _utils.py  compile.py  simulator.py  solvers.py  types.py  units.py
src/poincare/exporters/: poincare.py
src/poincare/printing/: latex.py  table.py
src/poincare/tests/: test_comparison.py  test_core.py  test_derivative.py  test_equation.py  test_eval.py  test_initials.py  test_inmutability.py  test_instantiation.py  test_interact.py  test_names.py  test_reactions.py  test_serialize.py  test_subclass.py  test_time.py  test_units.py  utils.py
src/poincare/tests/simulator/: test_backends.py  test_initials.py  test_names.py  test_time.py  test_transform.py
src/simbio/: __init__.py  core.py  test_compound_reactions.py  test_simbio.py
src/simbio/io/: sbml.py  sbml_math.py
