[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "poincare"
authors = [
    { name="Hernán E. Grecco", email="hernan.grecco@gmail.com" },
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = "Simulation of dynamical systems."
requires-python = ">=3.7"
keywords = [
    "dynamical systems",
    "differential equations",
    "ODE",
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}

[project.urls]
"Homepage" = "https://github.com/maurosilber/poincare"
"Bug Tracker" = "https://github.com/maurosilber/poincare/issues"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
