[project]
name = "poincare"
description = "Simulation of dynamical systems."
dynamic = ["version"]
authors = [
  { name = "Hernán E. Grecco", email = "hernan.grecco@gmail.com" },
  { name = "Mauro Silberberg", email = "maurosilber@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
keywords = ["dynamical systems", "differential equations", "ODE"]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pint",
  "pint-pandas",
  "scipy",
  "symbolite >= 0.6.0, < 0.7",
  "tabulate",
  "typing_extensions",
  "scipy-events >= 0.3.1",
]

[project.optional-dependencies]
interactive = ["ipywidgets"]

[project.urls]
Homepage = "https://github.com/maurosilber/poincare"
Issues = "https://github.com/maurosilber/poincare/issues"
Documentation = "https://maurosilber.github.io/poincare"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pixi.project]
channels = ["https://fast.prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
lint = { features = ["lint"], no-default-feature = true }
build = { features = ["build"], no-default-feature = true }
test = { features = ["test", "numbalsoda"], solve-group = "default" }
test-py310 = ["test", "py310", "numbalsoda"]
test-py311 = ["test", "py311", "numbalsoda"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]

[tool.pixi.dependencies]
numpy = "*"
pandas = "*"
pint = "*"
pint-pandas = "*"
scipy = "*"
tabulate = "*"
typing_extensions = "*"
symbolite = ">=0.6.0,<0.7"
scipy-events = ">=0.3.1"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run"

[tool.pixi.feature.build.dependencies]
uv = "*"

[tool.pixi.feature.build.tasks]
build = "uv build"
publish = "uv publish"

[tool.pixi.feature.test.dependencies]
pytest = "*"
cloudpickle = "<3.1.0"
matplotlib = "*"
jax = "*"
numba = "*"
ipywidgets = "*"

[tool.pixi.feature.numbalsoda.dependencies]
numbalsoda = "*"

[tool.pixi.feature.test.pypi-dependencies]
poincare = { path = ".", editable = true }

[tool.pixi.feature.test.tasks]
test = "pytest --doctest-modules"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
